--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,12 @@
     "liveServer.settings.AdvanceCustomBrowserCmdLine": "",
     // This means that you change your real URL (current PHP url) 
     // to another URL (which Live Sever starts).
+
     "liveServer.settings.proxy": {
         "enable": true,                             //   i. enabled
         "baseUri": "/",                             //  ii. workspace
         "proxyUri": "http://localhost:80" // iii. actual address
         //"proxyUri": "http://localhost:80/dwes" // prueba pero omites el dwes en URL
-    }    
+    },
+    "liveServer.settings.ChromeDebuggingAttachment": false
 }
