--- a/tema4_bbdd/04_ToDO/app/composer.json
+++ b/tema4_bbdd/04_ToDO/app/composer.json
@@ -7,7 +7,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"
-        }
+        },
+        "files":[
+            "src/helpers/funciones.php"
+        ]
     },
     "authors": [
         {
